plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
    id "io.freefair.lombok" version "8.0.1"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '20'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.mariadb.jdbc:mariadb-java-client'
    implementation 'com.auth0:java-jwt:4.4.0'
    implementation 'org.springframework:spring-orm'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.named('test') {
    useJUnitPlatform()
}
